se creo el dashboard con un panel para poder usar las demas funciones de la pagina a manera de administrador

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Estilo base del body para el portal */
+body {
+    @apply font-body bg-background-light text-text-dark;
+}
